# telescopic

./: .gitignore  CMakeLists.txt  compile  telescopic.cpp  telescopic.out
plots/: plot.gp  plot_2.gp
src/: functions.cpp  functions.hpp  parameters-omen.hpp  parameters.hpp  projectiveOrder2.cpp  projectiveOrder2.hpp  telescopicProjective.cpp  telescopicProjective.hpp
